# Chip8_Emulator

./: CMakeLists.txt
include/: chip8.h  open_file.h
src/: chip8.cpp  main.cpp  open_file.cpp
